apps/media-server/radarr/radarr-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: media
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - worker
      containers:
        - name: radarr
          image: linuxserver/radarr:6.0.4
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config
              mountPath: /custom-cont-init.d
              subPath: custom-cont-init.d
            - name: media
              mountPath: /media
          ports:
            - containerPort: 7878
          startupProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /ping
              port: 7878
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: 7878
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-videos
        - name: gluetun-config
          emptyDir: {}
        - name: iptables-rules
          configMap:
            name: radarr-iptables
