apps/media-server/radarr/radarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 7878
      protocol: TCP
  selector:
    app: radarr
