apps/media-server/radarr/radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
spec:
  ingressClassName: tailscale
  rules:
    - host: radarr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
  tls:
    - hosts:
        - radarr
